# badgePython

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  setenv.sh
.github/workflows/: github-actions.yml
boards/Brucon/: manifest.py  mpconfigboard.h  sdkconfig  target
boards/Brucon/python_modules/: _boot.py  accel.py  boot.py  buttons.py  consts.py  default_icons.py  factory_checks.py  i2c.py  launcher.py  nickname.py  nyan.py  partsim.py  rgb.py  snake.py  uinterface.py
boards/Brucon/python_modules/tasks/: powermanagement.py
boards/GENERIC/: manifest.py  mpconfigboard.h  sdkconfig
boards/HAKNOB/: manifest.py  mpconfigboard.h  partitions.csv  sdkconfig  target
components/buses/: CMakeLists.txt  Kconfig  buses.c
components/buses/include/: buses.h
components/consts/: CMakeLists.txt  modconsts.c  project_include.cmake
components/consts/include/: modconsts.h
components/driver_display/: CMakeLists.txt  Kconfig  driver_display.c  gc9a01_config.h  moddisplay.c  project_include.cmake  sdd1306_config.h
components/driver_display/include/: display.h  driver_display.h  framebuffer_display.h  gc9a01_config.h  sdd1306_config.h
components/driver_display_hub75/: CMakeLists.txt  Kconfig  driver_hub75.c  driver_hub75_brucon.c  i2s_parallel.c  i2s_parallel_brucon.c  modhub75.c  project_include.cmake
components/driver_display_hub75/include/: driver_hub75.h
components/driver_framebuffer/: CMakeLists.txt  driver_framebuffer.c  driver_framebuffer_dirty.c  driver_framebuffer_drawing.c  driver_framebuffer_orientation.c  driver_framebuffer_text.c  driver_framebuffer_window.c  moddisplay.c  project_include.cmake
components/driver_framebuffer/fonts/: font_Exo2-BlackItalic_12pt7b.c  font_Exo2-BlackItalic_13pt7b.c  font_Exo2-BlackItalic_16pt7b.c  font_Exo2-BlackItalic_18pt7b.c  font_Exo2-BlackItalic_20pt7b.c  font_Exo2-BlackItalic_22pt7b.c  font_Exo2-BlackItalic_24pt7b.c  font_Exo2-BlackItalic_36pt7b.c  font_Exo2-BlackItalic_42pt7b.c  font_Exo2-BlackItalic_6pt7b.c  font_Exo2-BlackItalic_8pt7b.c  font_Exo2-BlackItalic_9pt7b.c  font_Exo2-Black_12pt7b.c  font_Exo2-Black_13pt7b.c  font_Exo2-Black_16pt7b.c  font_Exo2-Black_18pt7b.c  font_Exo2-Black_20pt7b.c  font_Exo2-Black_22pt7b.c  font_Exo2-Black_24pt7b.c  font_Exo2-Black_36pt7b.c  font_Exo2-Black_42pt7b.c  font_Exo2-Black_6pt7b.c  font_Exo2-Black_8pt7b.c  font_Exo2-Black_9pt7b.c  font_Exo2-BoldItalic_12pt7b.c  font_Exo2-BoldItalic_13pt7b.c  font_Exo2-BoldItalic_16pt7b.c  font_Exo2-BoldItalic_18pt7b.c  font_Exo2-BoldItalic_20pt7b.c  font_Exo2-BoldItalic_22pt7b.c  font_Exo2-BoldItalic_24pt7b.c  font_Exo2-BoldItalic_36pt7b.c  font_Exo2-BoldItalic_42pt7b.c  font_Exo2-BoldItalic_6pt7b.c  font_Exo2-BoldItalic_8pt7b.c  font_Exo2-BoldItalic_9pt7b.c  font_Exo2-Bold_12pt7b.c  font_Exo2-Bold_13pt7b.c  font_Exo2-Bold_16pt7b.c  font_Exo2-Bold_18pt7b.c  (+273 more)
components/driver_framebuffer/fonts/fontconvert/: fontconvert  fontconvert.c  fontconvert_adafruit.c
components/driver_framebuffer/fonts/fontconvert/handmade_fonts/: font_ipane7x5.c
components/driver_framebuffer/include/: framebuffer.h  framebuffer_compositor.h  framebuffer_devices.h  framebuffer_dirty.h  framebuffer_disabled.h  framebuffer_drawing.h  framebuffer_internal.h  framebuffer_orientation.h  framebuffer_text.h
components/driver_framebuffer/png/: flash_reader.c  flash_reader.h  png_reader.c  png_reader.h
components/driver_fsoverbus/: CMakeLists.txt  Kconfig  driver_fsoverbus.c  filefunctions.c  packethelper.c  specialfunctions.c  uart_backend.c
components/driver_fsoverbus/include/: driver_fsoverbus.h  packethelper.h
components/driver_fsoverbus/python_usblib/: fsob.py  test.py
components/driver_rtcmem/: CMakeLists.txt  driver_rtcmem.c  modrtcmem.c  project_include.cmake
components/driver_rtcmem/include/: driver_rtcmem.h
components/driver_sdcard/: modsdcard.c
components/driver_sndmixer/: project_include.cmake
components/heapspace_tracker/: CMakeLists.txt  modheapspace.c  project_include.cmake
components/micropython/: CMakeLists.txt  main.c  modconsts.c  mpconfigboard.h  mpconfigport.h
components/micropython/esp32/: machine_i2c.c
components/micropython/vfs_fat/: moduos.c  vfs.h
components/motordriver/: CMakeLists.txt  modmotor.c  motor.c  project_include.cmake
components/motordriver/include/: motor.h  motorindent.h
components/pyota/: CMakeLists.txt
components_incompatible/driver_display_hub75/: modhub75.c
components_incompatible/driver_fsoverbus/: messageutils.c  packethelper.c  specialfunctions.c
components_incompatible/driver_fsoverbus/include/: driver_fsoverbus.h  fsob_backend.h  messageutils.h  packethelper.h
components_incompatible/driver_sdcard/: project_include.cmake
components_incompatible/driver_sndmixer/: modsndmixer.c
components_incompatible/pyota/: Kconfig  modpyota.c  project_include.cmake
main/: CMakeLists.txt  Kconfig.projbuild  factory_reset.c  idf_component.yml  main.c  nvs_init.c  platform.c  system.c  zip.c
main/include/: nvs_init.h  platform.h  platform_gen.h
manifests/: pykey.py
python_modules/: _boot.py  display.py  inisetup.py  nvs.py  system.py  term_menu.py  wifi.py
python_modules/common/: boot.py  ota.py
python_modules/pykey/: keyboard.py  launcher.py  led.py  led_keys.py  platform.py  testdisplay.py
